# dorje

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml
.claude/: settings.json
assistant/backend/: .env.example  pyproject.toml
assistant/backend/alembic/: env.py
assistant/backend/app/: config.py  main.py
assistant/frontend/: package-lock.json  package.json  vite.config.ts
assistant/frontend/src/: App.test.tsx  App.tsx
docs/: 01-proxmox-install.md  02-networking.md  03-remote-access.md  homelab-ops.md
scripts/: clone-dev.sh  destroy-dev.sh  list-dev.sh
